prevent long (>23) values stretching out the table
looking at you, Volkskrant Sales Media Brand de_persgroep_nederland_advertising

--- a/nobo-debugger-chrome-ext/popup.css
+++ b/nobo-debugger-chrome-ext/popup.css
@@ -67,6 +67,11 @@ td {
 	font-weight: bold;
 }
 
+/* prevent looong values from stretching out the table */
+td.long {
+	word-break: break-all;
+}
+
 td.missing {
 	font-weight: normal;
 	font-style: italic;
